add iframe config

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <script async="" custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
+<script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+<script async="" custom-element="amp-image-lightbox" src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"></script>
 
 <link rel="canonical" href="http://example.com/" >
 
@@ -19,7 +21,7 @@
 
     
     <style amp-custom>
-        node_modules/tailwindcss/utilities.css 1:1 ‼ grid-gap only works if grid-template(-areas) is being used [autoprefixer] 1:1 ‼ grid-gap only works if grid-template(-areas) is being used [autoprefixer] html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}a{background-color:transparent}b{font-weight:bolder}small{font-size:80%}button{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button{overflow:visible}button{text-transform:none}button,[type=button]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring{outline:1px dotted ButtonText}h1,h2,h3,h4,p{margin:0}button{background-color:transparent;background-image:none;padding:0}button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color}ul{list-style:none;margin:0;padding:0}html{font-family:system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;line-height:1.5}*,::before,::after{box-sizing:border-box;border-width:0;border-style:solid;border-color:#e2e8f0}button,[role=button]{cursor:pointer}table{border-collapse:collapse}h1,h2,h3,h4{font-size:inherit;font-weight:inherit}a{color:inherit;text-decoration:inherit}button{padding:0;line-height:inherit;color:inherit}svg,embed{display:block;vertical-align:middle}.container{width:100%}@media(min-width:640px){.container{max-width:640px}}@media(min-width:768px){.container{max-width:768px}}@media(min-width:1024px){.container{max-width:1024px}}@media(min-width:1280px){.container{max-width:1280px}}.container-header{text-align:center;display:-ms-grid;display:grid;-ms-grid-columns:minmax(64px,20%)auto 10% 10%;grid-template-columns:minmax(64px,20%)auto 10% 10%}section{padding:1rem}.section-header{font-weight:700;font-family:system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;overflow-wrap:normal;word-break:normal;padding-top:1.5rem;padding-bottom:.5rem;font-size:1.875rem}.section-subheader{font-weight:700;font-family:system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;overflow-wrap:normal;word-break:normal;padding-top:1.5rem;padding-bottom:.5rem;font-size:1.25rem}.dark-mode{background-color:#2d3748;color:#fff}.light-mode{background-color:#fff;color:#2d3748}.appearance-none{-webkit-appearance:none;-moz-appearance:none;appearance:none}.bg-gray-800{background-color:#2d3748}.border-gray-200{border-color:#edf2f7}.border-gray-600{border-color:#718096}.hover\:border-teal-500:hover{border-color:#38b2ac}.rounded{border-radius:.25rem}.border{border-width:1px}.border-t{border-top-width:1px}.block{display:block}.inline{display:inline}.flex{display:flex}.grid{display:-ms-grid;display:grid}.table{display:table}.flex-wrap{flex-wrap:wrap}.items-center{align-items:center}.clearfix:after{content:"";display:table;clear:both}.font-thin{font-weight:200}.font-bold{font-weight:700}.h-3{height:.75rem}.h-64{height:16rem}.leading-normal{line-height:1.5}.mx-4{margin-left:1rem;margin-right:1rem}.my-8{margin-top:2rem;margin-bottom:2rem}.mx-auto{margin-left:auto;margin-right:auto}.mb-4{margin-bottom:1rem}.min-h-screen{min-height:100vh}.focus\:outline-none:focus{outline:0}.p-4{padding:1rem}.p-6{padding:1.5rem}.py-2{padding-top:.5rem;padding-bottom:.5rem}.px-3{padding-left:.75rem;padding-right:.75rem}.pr-4{padding-right:1rem}.fixed{position:fixed}.top-0{top:0}.fill-current{fill:currentColor}.text-center{text-align:center}.text-white{color:#fff}.text-gray-400{color:#cbd5e0}.text-gray-500{color:#a0aec0}.text-gray-700{color:#4a5568}.text-gray-800{color:#2d3748}.hover\:text-white:hover{color:#fff}.hover\:text-gray-900:hover{color:#1a202c}.hover\:text-blue-400:hover{color:#63b3ed}.text-xs{font-size:.75rem}.text-xl{font-size:1.25rem}.text-2xl{font-size:1.5rem}.text-3xl{font-size:1.875rem}.underline{text-decoration:underline}.no-underline{text-decoration:none}.hover\:no-underline:hover{text-decoration:none}.w-3{width:.75rem}.w-16{width:4rem}.w-64{width:16rem}.w-full{width:100%}.w-screen{width:100vw}.z-10{z-index:10}.gap-8{grid-gap:2rem;gap:2rem}.grid-cols-1{-ms-grid-columns:(minmax(0,1fr))[1];grid-template-columns:repeat(1,minmax(0,1fr))}.grid-cols-2{-ms-grid-columns:(minmax(0,1fr))[2];grid-template-columns:repeat(2,minmax(0,1fr))}@media(min-width:640px){.sm\:mx-12{margin-left:3rem;margin-right:3rem}}@media(min-width:768px){.md\:max-w-3xl{max-width:48rem}.md\:gap-32{grid-gap:8rem;gap:8rem}}@media(min-width:1024px){.lg\:hidden{display:none}}
+        node_modules/tailwindcss/utilities.css 1:1 ‼ grid-gap only works if grid-template(-areas) is being used [autoprefixer] 1:1 ‼ grid-gap only works if grid-template(-areas) is being used [autoprefixer] html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}a{background-color:transparent}b{font-weight:bolder}small{font-size:80%}button{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button{overflow:visible}button{text-transform:none}button,[type=button]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring{outline:1px dotted ButtonText}h1,h2,h3,h4,p{margin:0}button{background-color:transparent;background-image:none;padding:0}button:focus{outline:1px dotted;outline:5px auto -webkit-focus-ring-color}ul{list-style:none;margin:0;padding:0}html{font-family:system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;line-height:1.5}*,::before,::after{box-sizing:border-box;border-width:0;border-style:solid;border-color:#e2e8f0}button,[role=button]{cursor:pointer}table{border-collapse:collapse}h1,h2,h3,h4{font-size:inherit;font-weight:inherit}a{color:inherit;text-decoration:inherit}button{padding:0;line-height:inherit;color:inherit}svg,embed{display:block;vertical-align:middle}.container{width:100%}@media(min-width:640px){.container{max-width:640px}}@media(min-width:768px){.container{max-width:768px}}@media(min-width:1024px){.container{max-width:1024px}}@media(min-width:1280px){.container{max-width:1280px}}.container-header{text-align:center;display:-ms-grid;display:grid;-ms-grid-columns:minmax(64px,20%)auto 10% 10%;grid-template-columns:minmax(64px,20%)auto 10% 10%}section{padding:1rem}.section-header{font-weight:700;font-family:system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;overflow-wrap:normal;word-break:normal;padding:.5rem;font-size:1.875rem}.section-subheader{font-weight:700;font-family:system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;overflow-wrap:normal;word-break:normal;padding-top:1.5rem;padding-bottom:.5rem;font-size:1.25rem}.dark-mode{background-color:#2d3748;color:#fff}.light-mode{background-color:#fff;color:#2d3748}.appearance-none{-webkit-appearance:none;-moz-appearance:none;appearance:none}.bg-white{background-color:#fff}.bg-gray-800{background-color:#2d3748}.border-gray-200{border-color:#edf2f7}.border-gray-600{border-color:#718096}.hover\:border-teal-500:hover{border-color:#38b2ac}.rounded{border-radius:.25rem}.border{border-width:1px}.border-t{border-top-width:1px}.block{display:block}.inline{display:inline}.flex{display:flex}.grid{display:-ms-grid;display:grid}.table{display:table}.flex-wrap{flex-wrap:wrap}.items-center{align-items:center}.font-thin{font-weight:200}.font-bold{font-weight:700}.h-3{height:.75rem}.h-64{height:16rem}.leading-normal{line-height:1.5}.m-4{margin:1rem}.mx-4{margin-left:1rem;margin-right:1rem}.my-8{margin-top:2rem;margin-bottom:2rem}.mx-auto{margin-left:auto;margin-right:auto}.mb-4{margin-bottom:1rem}.min-h-screen{min-height:100vh}.focus\:outline-none:focus{outline:0}.p-2{padding:.5rem}.p-4{padding:1rem}.p-6{padding:1.5rem}.py-2{padding-top:.5rem;padding-bottom:.5rem}.px-3{padding-left:.75rem;padding-right:.75rem}.pr-4{padding-right:1rem}.fixed{position:fixed}.top-0{top:0}.fill-current{fill:currentColor}.text-center{text-align:center}.text-white{color:#fff}.text-gray-400{color:#cbd5e0}.text-gray-500{color:#a0aec0}.text-gray-700{color:#4a5568}.text-gray-800{color:#2d3748}.hover\:text-white:hover{color:#fff}.hover\:text-gray-900:hover{color:#1a202c}.hover\:text-blue-400:hover{color:#63b3ed}.text-xs{font-size:.75rem}.text-2xl{font-size:1.5rem}.text-3xl{font-size:1.875rem}.underline{text-decoration:underline}.no-underline{text-decoration:none}.hover\:no-underline:hover{text-decoration:none}.align-top{vertical-align:top}.w-3{width:.75rem}.w-16{width:4rem}.w-64{width:16rem}.w-full{width:100%}.w-screen{width:100vw}.z-10{z-index:10}.gap-8{grid-gap:2rem;gap:2rem}.grid-cols-1{-ms-grid-columns:(minmax(0,1fr))[1];grid-template-columns:repeat(1,minmax(0,1fr))}.grid-cols-2{-ms-grid-columns:(minmax(0,1fr))[2];grid-template-columns:repeat(2,minmax(0,1fr))}@media(min-width:640px){.sm\:mx-12{margin-left:3rem;margin-right:3rem}}@media(min-width:768px){.md\:max-w-3xl{max-width:48rem}.md\:gap-32{grid-gap:8rem;gap:8rem}}@media(min-width:1024px){.lg\:hidden{display:none}}
     </style>
 
 
@@ -50,8 +52,8 @@
 </header><main id="main" class="grid grid-cols-1">
 <div class="container w-full md:max-w-3xl mx-auto">
 
-    <div class="w-full text-xl text-gray-800 leading-normal">
-        <article class="text-center text-gray-700">
+    <div class="w-full text-gray-800 leading-normal">
+        <article class="text-gray-700">
             <div class="dark-mode">
                 <section id="intro" class="">
                 <div class="">
@@ -102,7 +104,7 @@
                 </div>
 
                 <div class="flex flex-wrap">
-                    <amp-img class="h-64 w-64 mx-auto p-6" alt="Portrait picture of Katie" class="" height="70" layout="responsive"
+                    <amp-img class="h-64 w-64 mx-auto p-6 m-4" alt="Portrait picture of Katie" class="" height="70" layout="responsive"
                              src="images/katie-right.jpg" width="50"></amp-img>
                     <p class="">I am a registered Member of the British Association for Counselling and
                         Psychotherapy (BACP) and bound by their Ethical Framework for Good Practice.
@@ -122,23 +124,27 @@
                         <div class="">
                             <h3 class="section-subheader">Qualifications:</h3>
                             <ul class="">
-                                <li>Post Graduate Diploma in Psychological Wellbeing, Counselling and Psychotherapy, 2018</li>
-                                <li>Certificate in Counselling Skills, 2015</li>
-                                <li>Bachelor of Education (Hons), 1994</li>
+                                <li>Post Graduate Diploma in Psychological Wellbeing, Counselling and Psychotherapy, 2018.</li>
+                                <li>Certificate in Counselling Skills, 2015.</li>
+                                <li>Bachelor of Education (Hons), 1994.</li>
                             </ul>
                             <div class="grid grid-cols-2 gap-8 md:gap-32 my-8">
                                 <a href="https://www.bacp.co.uk/profile/70a6189d-5390-e711-80e8-3863bb349ac0/Therapist">
-                                    <div class="">
-                                        <amp-img alt="Katie's British Association for Counselling and Psychotherapy page"
-                                                 width="100" height="50" layout="responsive"
-                                                 src="images/BACP-Logo-374734.png"></amp-img>
+                                    <div class="bg-white p-2">
+                                        <div class="">
+                                            <amp-img alt="Katie's British Association for Counselling and Psychotherapy page"
+                                                     width="100" height="50" layout="responsive"
+                                                     src="images/BACP-Logo-374734.png"></amp-img>
+                                        </div>
                                     </div>
                                 </a>
                                 <a href="https://www.psychologytoday.com/gb/counselling/katie-thompson-glasgow-sct/490057">
-                                    <div class="p1 border rounded">
-                                        <amp-img alt="Katie's British Association for Counselling and Psychotherapy page"
-                                                 width="100" height="50" layout="responsive"
-                                                 src="images/psychologytoday.png"></amp-img>
+                                    <div class="bg-white p-2">
+                                        <div class="p1 border rounded">
+                                            <amp-img alt="Katie's British Association for Counselling and Psychotherapy page"
+                                                     width="100" height="50" layout="responsive"
+                                                     src="images/psychologytoday.png"></amp-img>
+                                        </div>
                                     </div>
                                 </a>
                             </div>
@@ -216,7 +222,7 @@
                             I can be contacted by email or telephone. If I am not available, please leave a short
                             message and I will get back to you as soon as possible.
                         </p>
-                        <p>
+                        <p class="m-4">
                             <b>
                                 If you are distressed and need urgent support, please call
                                 <a href="https://www.samaritans.org/">Samaritans</a> on 116 123 or NHS 111.
@@ -227,13 +233,13 @@
                             <table class="table-light">
                                 <tbody>
                                 <tr>
-                                    <td><h3 class="h4 inline">eMail</h3>:</td>
+                                    <td><h3 class="h4 inline">Email</h3>:</td>
                                     <td><a href="mailto:contact@parkgrovecounselling.co.uk?Subject=Contact" target="_top">
                                             <p class="inline">contact@parkgrovecounselling.co.uk</p>
                                         </a></td>
                                 </tr>
                                 <tr>
-                                    <td><h3 class="h4 inline">Telephone</h3>:</td>
+                                    <td><h3 class="h4 inline">Phone</h3>:</td>
                                     <td><a href="tel:07735-555-423"><p class="inline">07735 555 423</p></a></td>
                                 </tr>
                                 <tr>
@@ -247,7 +253,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><h3 class="h4 inline">Address</h3>:</td>
+                                    <td class="align-top"><h3 class="h4 inline">Address</h3>:</td>
                                     <td><a href="https://maps.google.com/maps?ll=55.866588,-4.279827&z=16&t=m&hl=en&gl=GB&mapclient=embed&daddr=5%20La%20Belle%20Pl%20Glasgow%20G3%207LH@55.86658809999999,-4.2798269">
                                             <p class="mb1 inline">
                                                 Parkgrove Counselling,<br/>
@@ -259,15 +265,13 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="clearfix mt3">
-                            <div class="col col-12">
-                                <amp-iframe width="200" height="100"
-                                            sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"
-                                            layout="responsive"
-                                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.7739615406317!2d-4.282015584065047!3d55.86658808058396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4888442b6685d6bf%3A0x492723aed29aa2a2!2s5%20La%20Belle%20Pl%2C%20Glasgow%20G3%207LH!5e0!3m2!1sen!2suk!4v1570391999916!5m2!1sen!2suk"
-                                            allowfullscreen>
-                                </amp-iframe>
-                            </div>
+                        <div class="">
+                            <amp-iframe width="200" height="100"
+                                        sandbox="allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"
+                                        layout="responsive"
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2238.7739615406317!2d-4.282015584065047!3d55.86658808058396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4888442b6685d6bf%3A0x492723aed29aa2a2!2s5%20La%20Belle%20Pl%2C%20Glasgow%20G3%207LH!5e0!3m2!1sen!2suk!4v1570391999916!5m2!1sen!2suk"
+                                        allowfullscreen>
+                            </amp-iframe>
                         </div>
                     </div>
                 </div>
